# MyGoogleMap

./: CMakeLists.txt  README.md  boosted  main.cpp  mygooglemap.cpp  mygooglemap.h
map/: testmap.txt
